# chat-history

./: Cargo.toml  README.md  SKILL.md
.github/workflows/: ci.yml  release.yml
src/: dates.rs  display.rs  inspect.rs  lib.rs  main.rs  parser.rs  scoring.rs  search.rs  session.rs
tests/: cli.rs
