[package]
name = "chat-history"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Ayush Bhardwaj"]
description = "Search, inspect, and export Claude Code + Cursor conversation history"
license = "MIT"
repository = "https://github.com/ay-bh/chat-history"
readme = "README.md"
keywords = ["chat-history", "claude-code", "cursor-ide", "conversation", "transcript"]
categories = ["command-line-utilities", "development-tools"]


[[bin]]
name = "chat-history"
path = "src/main.rs"

[[bin]]
name = "ch"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
rayon = "1.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
